<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/white"
    android:paddingHorizontal="30dp"
    android:orientation="vertical"
    android:id="@+id/signUp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="Sign Up"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="40dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        >
        <EditText
            android:id="@+id/email"
            android:background="@drawable/rectangular_field"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:hint="Enter your Email"
            android:paddingVertical="5dp"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:paddingLeft="60dp"/>
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/email"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        >
        <EditText
            android:id="@+id/password1"
            android:background="@drawable/rectangular_field"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:hint="Enter your Password"
            android:paddingVertical="5dp"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:paddingLeft="60dp"/>
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/password"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        >
        <EditText
            android:id="@+id/password2"
            android:background="@drawable/rectangular_field"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:hint="Confirm your Password"
            android:paddingVertical="5dp"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:paddingLeft="60dp"/>
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/password"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"/>

    </RelativeLayout>
    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="Sign Up"
        android:textColor="@color/white"
        android:layout_marginTop="25dp"
        android:background="@drawable/button"
        android:textSize="25dp"
        android:textAllCaps="false"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Have an account?"
            android:textColor="@color/black"
            android:textSize="18dp"/>
        <TextView
            android:id="@+id/signinTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign In"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:textSize="18dp"/>


    </LinearLayout>
</LinearLayout>