...
    android:layout_height="match_parent"
    tools:context=".UI.MainActivity"
    android:gravity="center"
    android:background="@color/white"
    android:paddingHorizontal="30dp"
    android:orientation="vertical"
    android:id="@+id/main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="Sign In"
...
